# trading-terminal

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  main.py
backend/api/: routes.py
backend/config/: settings.py
backend/data/: base_provider.py  polygon_provider.py
backend/indicators/: technical.py
